--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "swagger-jsdoc": "5.0.1",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   }
 }
